// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Text /> Text with fontFamily 1`] = `
<text
  fontName={
    Object {
      "family": "Helvetica",
      "style": "Regular",
    }
  }
  innerRef={
    Object {
      "current": undefined,
    }
  }
  style={
    Object {
      "fontFamily": "Helvetica",
    }
  }
/>
`;

exports[`<Text /> Text with fontFamily, fontWeight 1`] = `
<text
  fontName={
    Object {
      "family": "Helvetica",
      "style": "Bold",
    }
  }
  innerRef={
    Object {
      "current": undefined,
    }
  }
  style={
    Object {
      "fontFamily": "Helvetica",
      "fontWeight": "bold",
    }
  }
/>
`;

exports[`<Text /> Text with fontFamily, fontWeight, fontStyle 1`] = `
<text
  fontName={
    Object {
      "family": "Helvetica",
      "style": "Bold Italic",
    }
  }
  innerRef={
    Object {
      "current": undefined,
    }
  }
  style={
    Object {
      "fontFamily": "Helvetica",
      "fontStyle": "italic",
      "fontWeight": "bold",
    }
  }
/>
`;

exports[`<Text /> Text without props 1`] = `
<text
  innerRef={
    Object {
      "current": undefined,
    }
  }
/>
`;
